--- a/api/package.json
+++ b/api/package.json
@@ -2,7 +2,7 @@
   "name": "api",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts & npx prisma studio",
+    "dev": "tsx watch src/index.ts & npx prisma generate & npx prisma studio",
     "build": "npx prisma generate && tsc",
     "start": "node dist/index.js"
   },
